# google_calendar_mcp

./: .coveragerc  .cursorrules  .gitignore  CLAUDE.md  COMO_USAR.md  COMPLETED.md  CONFIGURACAO_FINAL.md  CONFIGURACAO_GEMINI_MCP.md  CONFIGURACAO_MCP_LOCAL.md  CURSOR_RULES.md  GEMINI.MD  INSTRUCOES_FINAIS.md  Makefile  OpenCode.md  README.md  RESUMO_FINAL.md  TODO.md  auth.py  calendar_ops.py  lint.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  run_mcp.py  run_mcp.sh  setup_gemini_mcp.sh  test_stdio.py
.opencode/: opencode.db-shm  opencode.db-wal
.warp/: rules.md
config/: google-calendar-mcp.service  ics_urls.json  nginx-mcp-remote-secure.conf  nginx-mcp-remote.conf  nginx.conf
doc/: README.md  TROUBLESHOOTING.md  architecture.md  development_best_practices.md  future.md  installation.md  intelligent_scheduling.md  mcp_configuration.md  mcp_remote_setup.md  operations.md  overview.md  recent_updates.md  regenerate_auth.md  related_docs.md  tasks_integration.md  troubleshooting.md  usage.md
google_calendar_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
make/: analysis-dirs.mk  analysis-files.mk  mcp.mk  testing.mk
scripts/: clean_git_history.py  deploy_remote_config.sh  migrate_to_uvx.py  sanitize_sensitive_data.py  setup_final.sh  setup_fixed_token.py  setup_mcp_auth.sh  setup_mcp_remote.sh  start_mcp_remote.sh  start_mcp_systemd.sh  test_connection.sh  test_fixed_token.py  test_mcp_remote.sh
src/: __init__.py  auth.py  calendar_ops.py  cancel_utils.py  cli.py  main.py  mcp_cli.py  mcp_get_handler.py  mcp_handler.py  (+11 more)
(+302 files in other folders)
